--- a/public/b-template/css/materialize.css
+++ b/public/b-template/css/materialize.css
@@ -5010,7 +5010,8 @@ nav {
   background-color: #ee6e73;
   width: 100%;
   height: 56px;
-  line-height: 56px; }
+  line-height: 56px;
+  }
   nav a {
     color: #fff; }
   nav .nav-wrapper {
@@ -5106,10 +5107,12 @@ nav {
 .navbar-fixed {
   position: relative;
   height: 56px;
-  z-index: 998; }
+  z-index: 998;
+  margin-top: -25px;
+}
   .navbar-fixed nav {
     background-color: darkslategrey;
-    position: fixed; 
+    position: fixed;
   }
 
 @media only screen and (min-width : 601px) {
@@ -5614,7 +5617,7 @@ small {
   -ms-transition: .2s ease-out;
   transition: .2s ease-out;
   cursor: pointer; }
- 
+
 .btn-floating {
   display: inline-block;
   color: #FFF;
